# Portfolio-SuZhouMetroIA

./: .gitignore  CMakeLists.txt  README.md  suzhou-metro-network.json
config/: api_keys.example.json  assistant_rules.json  ui_styles.json
docs/: model_function_calls.md  runtime_framework.md  strict_pm_quality_gates.md  style_system.md  简历项目描述.md
resources/: metro_data.qrc
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/models/: CMakeLists.txt  informationBar.json  metro_line.cpp  metro_line.h  metro_network_data.cpp  metro_network_data.h  station_maps_manifest.json  suzhou_metro_network_core.json
src/services/: CMakeLists.txt  activity_logger.cpp  activity_logger.h  app_config_service.cpp  app_config_service.h  fare_service.cpp  fare_service.h  metro_tool_service.cpp  metro_tool_service.h  qwen_assistant_service.cpp  qwen_assistant_service.h  route_service.cpp  route_service.h  speech_realtime_service.cpp  speech_realtime_service.h  style_service.cpp  style_service.h
src/utils/: CMakeLists.txt  time_utils.cpp  time_utils.h
src/widgets/: CMakeLists.txt  chat_bubble_widget.cpp  chat_bubble_widget.h  chat_panel_widget.cpp  chat_panel_widget.h  info_panel.cpp  info_panel.h  information_bar_widget.cpp  information_bar_widget.h  metro_map_widget.cpp  metro_map_widget.h  model_settings_widget.cpp  model_settings_widget.h  route_plan_widget.cpp  route_plan_widget.h  settlement_widget.cpp  settlement_widget.h  station_panel_widget.cpp  station_panel_widget.h  text_prompt_widget.cpp  text_prompt_widget.h  voice_assistant_widget.cpp  voice_assistant_widget.h
